# to-do-phase-1

./: PROJECT_SUMMARY.md  main.py  pyproject.toml
.specify/memory/: claude-agent-context.md
history/prompts/todo-app/: 1-todo-app-architecture-plan.plan.prompt.md  2-todo-app-task-generation.tasks.prompt.md
specs/todo-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/todo-app/contracts/: api-contract.md
specs/todo_app/: plan.md  spec.md  tasks.md
src/todo_app/cli/: cli.py
src/todo_app/models/: todo.py
src/todo_app/repositories/: __init__.py  in_memory_repository.py
src/todo_app/services/: todo_service.py
src/todo_app/utils/: __init__.py  validators.py
tests/unit/models/: test_todo.py
todo_app/: README.md  requirements.txt  run.bat  test_todo_app.py  todo_app.py  verify_phase_i.py
